--- a/login-styles.css
+++ b/login-styles.css
@@ -1,57 +1,46 @@
 /* Centers the container */
-.background{
+body{
     display: flex;
-
-    min-width: 100vw;
-    min-height: 100vh;
     justify-content: center;
     align-items: center;
-
+    min-width: 100vw;
+    min-height: 100vh;
+    margin: 0px; /* Gets rid of scroll bars and white outline of screen */
     background-color: #F7ECE1 ;
 }
 
-.container{
+.container{ /* outline: 10px solid red; */
     display: flex;
-
-    min-height: 75vh;
-    min-width: 75vw;
-    background-color: #CAC4CE;
-
-    /* Sets the direction to top to bottom. */
     flex-direction: column;
-
-    /* Makes items stay in the center of the screen */
-    align-items: center;
-
-    /* Creates space between all items */
     justify-content: space-evenly;
-
-    /* Rounded Edges */
-    border-radius: 25px;
-
-    /* Shadow */
-    box-shadow: 0 0 20px #AAAAAA;
- 
+    align-items: center;
+    min-height: 250px; 
+    height: 75vh;
+    max-height: 500px;
+    min-width: 300px;
+    width: 50vw;
+    max-width: 600px;
+    background-color: #CAC4CE;
+    border-radius: 25px; /* Makes rounded edges */
+    box-shadow: 0 0 20px #AAAAAA; /* Adds box shadow */
 }
 
 .header{
-    font-size: 10vh;
+    font-size: 96px;
     font-weight: bold;
     color: #A93F55;
 }
 
 .sign-in-input {
     border: none;
-    border-bottom: .5vh solid #242038;
+    border-bottom: 3px solid #242038;
     background-color: #CAC4CE;
-    width: 30vw;
-    height: 7.5vh;
-    padding: 1vh;
-    font-size: 3.5vh;
-    margin-bottom: 2.5vh;
-    margin-top: 2.5vh;
+    min-width: 200px;
+    width: 35vw;
+    max-width: 400px;
+    font-size: 24px;
     color: black;
-
+    padding: 5px;
 }
 
 /* Changes Placeholder text color */
@@ -68,10 +57,9 @@
 .sign-in-button {
     background-color: #A93F55;
     color: white;
-    font-size: 2.5vh;
-    width: 40vw;
-    height: 5vh;
-    margin: 5vh;
+    width: 50%;
+    font-size: 32px;
+    padding: 5px;
     border-radius: 25px;
     text-align: center;
     border: none;
@@ -86,61 +74,17 @@
 }
 
 /* Resize all elements correctly */
-@media screen and (width <= 650px){
+@media screen and (max-width: 992px) {
+    .container{
+        outline: 10px solid red;
+    }
     .header{
-        font-size: 10vw;
+        font-size: 72px;
     }
-
     .sign-in-input{
-        font-size: 3.5vw;
+        font-size: 18px;
     }
     .sign-in-button{
-        font-size: 2.5vw;
-    }
-}
-@media screen and (width <= 450px) {
-    .header{
-        font-size: 15vw;
-    }
-
-    .sign-in-input{
-        font-size: 5vw;
-    }
-    .sign-in-button{
-        font-size: 5vw;
-    }
-}
-@media screen and (width <= 250px) {
-    .header{
-        font-size: 18vw;
-    }
-}
-@media screen and (height <= 600px){
-    .sign-in-input{
-        height: 5vh;
-    }
-    .sign-in-button{
-        height: 7vh;
-    }
-}
-@media screen and (height <= 400px){
-    .sign-in-button{
-        height: 10vh;
-    }
-}
-@media screen and (height <= 300px){
-    .sign-in-input{
-        height: 10vh;
-    }
-    .sign-in-button{
-        height: 20vh;
-    }
-}
-@media screen and (height <= 150px){
-    .sign-in-input{
-        height: 25vh;
-    }
-    .sign-in-button{
-        height: 45vh;
+        font-size: 24px;
     }
 }
