--- a/login-styles.css
+++ b/login-styles.css
@@ -1,12 +1,14 @@
-/* Centers the container */
-body{
+body{ /* Centers the container */
     display: flex;
     justify-content: center;
     align-items: center;
     min-width: 100vw;
     min-height: 100vh;
     margin: 0px; /* Gets rid of scroll bars and white outline of screen */
-    background-color: #F7ECE1 ;
+    background-color: #C57B57;
+    background-image: url("pexels-felixmittermeier-956981.jpg");
+    background-size: 125vw;
+    background-position: 20%;
 }
 
 .container{ /* outline: 10px solid red; */
@@ -20,42 +22,47 @@ body{
     min-width: 300px;
     width: 50vw;
     max-width: 600px;
-    background-color: #CAC4CE;
+    backdrop-filter: blur(5px);/* Makes background transparent */
+    outline: 2px solid white;
     border-radius: 25px; /* Makes rounded edges */
-    box-shadow: 0 0 20px #AAAAAA; /* Adds box shadow */
+    box-shadow: 0 0 50px #293E66; /* Adds box shadow */
 }
 
 .header{
     font-size: 96px;
     font-weight: bold;
-    color: #A93F55;
+    color: white;
+    text-shadow: #233558 5px 1px 0;
 }
 
 .sign-in-input {
-    border: none;
-    border-bottom: 3px solid #242038;
-    background-color: #CAC4CE;
+    border: none; /* makes the rest of the border not there */
+    border-bottom: 3px solid #6A8D73;
+    background-color: transparent;
     min-width: 200px;
     width: 35vw;
     max-width: 400px;
     font-size: 24px;
-    color: black;
+    color: white;
     padding: 5px;
+    text-shadow: #233558 2px 1px 0;
+}
+.sign-in-input:focus{ /* Changes line color under sign in */
+    border-bottom: 3px solid #B6663E;
+    outline: none; /* Takes black border away when you click on the sign in inputs */
 }
 
-/* Changes Placeholder text color */
-::placeholder{
-    color: #524958;
+::placeholder{ /* Changes Placeholder text color */
+    color: #CCCCCC;
     opacity: 1;
 }
 
-/* Takes black border away when you click on the sign in inputs */
-.sign-in-input:focus {
-    outline: none;
+input:focus::placeholder{ /* Changes Placeholder color when you click */
+    color: #A3A3A3;
 }
 
 .sign-in-button {
-    background-color: #A93F55;
+    background-color: #545F95;
     color: white;
     width: 50%;
     font-size: 32px;
@@ -63,21 +70,19 @@ body{
     border-radius: 25px;
     text-align: center;
     border: none;
-    box-shadow: 0 0 20px #AAAAAA;
+    box-shadow: 0 0 20px #233558;
+    text-shadow: #233558 3px 1px 0;
 }
 .sign-in-button:hover{
-    background-color: #863242;
-}
-.sign-in-button:active{
-    box-shadow: 0 2px 20px #3d3d3d;
-    transform: translateY(2px);
+    background-color: #3B4268;
 }
 
-/* Resize all elements correctly */
-@media screen and (max-width: 992px) {
-    .container{
-        outline: 10px solid red;
-    }
+.sign-in-button:active{
+    box-shadow: 0 0 10px #233558;
+    transform: translateY(4px);
+}
+
+@media screen and (max-width: 992px) { /* Resize all elements correctly */
     .header{
         font-size: 72px;
     }
